second commit after getting the layout right

--- a/index.html
+++ b/index.html
@@ -10,56 +10,72 @@
 <body>
     <!-- my second option -->
     <div class="container">
+<!-- 
         <div class="display-section">
-            <div class="upper-output" data-previous-operand>123 &#215; 5 
+            <div>DEG</div>
+            <div class="upper-output" data-previous-operand>
+                123&#215;5 
             </div>
             <div class="lower-output" data-current-operand>
-              615
+                615
             </div>
-         </div>
-        <div class="numbers">
-            <div>
+        </div> -->
+
+
+        <div class="output-container">
+            <div class="output-text">DEG</div>
+            <div class="upper-output" data-previous-operand>
+                123&#215;5 
+            </div>
+            <div class="lower-output" data-current-operand>
+                615
+            </div>
+        </div>
+
+
+        <div class="input-container">
+            <div class="wrapper1">
                 <button class="btn2">7</button>
                 <button class="btn2">8</button>
                 <button class="btn2">9</button>
             </div>
-            <div>
+            <div class="wrapper1">
                 <button class="btn2">4</button>
                 <button class="btn2">5</button>
                 <button class="btn2">6</button>
             </div>
-            <div>
+            <div class="wrapper1">
                 <button class="btn2">1</button>
                 <button class="btn2">2</button>
                 <button class="btn2">3</button>
             </div>
-            <div>
+            <div class="wrapper1">
                 <button class="btn2">.</button>
                 <button class="btn2">0</button>
                 <button class="btn2">=</button>
             </div>
-
-            <div>
-                <button class="btn4" onclick="myFunction">DEL</button>
-                <button class="btn4" onclick="myFunction">&#247;</button>
-                <button class="btn4" onclick="myFunction">&#215;</button>
-                <button class="btn4" onclick="myFunction">&#8722;</button>
-                <button class="btn4" onclick="myFunction">&#43;</button>
-            </div>
         </div>
+        <div class="wrapper1">
+            <button class="btn4" onclick="myFunction">DEL</button>
+            <button class="btn4" onclick="myFunction">&#247;</button>
+            <button class="btn4" onclick="myFunction">&#215;</button>
+            <button class="btn4" onclick="myFunction">&#8722;</button>
+            <button class="btn4" onclick="myFunction">&#43;</button>
+        </div>
+    </div>
     </div>
 
     <!-- my third option  -->
 
-    <div class="main-container">
-        <div class="display-section">
+    <!-- <div class="main-container"> -->
+        <!-- <div class="display-section">
            <div class="upper-output" data-previous-operand>123 &#215; 5 
            </div>
            <div class="lower-output" data-current-operand>
              615
            </div>
-        </div>
-        <button data-number>7</button>
+        </div> -->
+        <!-- <button data-number>7</button>
         <button data-number>8</button>
         <button data-number>9</button>
         <button data-number>4</button>
@@ -78,6 +94,6 @@
         <button data-operation>&#8722;</button>
         <button data-operation>&#43;</button>
         
-     </div>
+     </div> -->
 </body>
 </html>
